<resources>
    <string name="app_name">가위바위보!</string>
    <string name="apple">apple</string>
    <string name="lime">lime</string>
    <string name="banana">banana</string>
    <string name="grape">grape</string>
    <string name="rock">rock</string>"
    <string name="scissors">scissors</string>">
    <string name="paper">paper</string>">
    <string name="show_result">결과보기</string>">
    <string name="back">뒤로가기</string>">
    <string name="textview">선택하시오</string>\
    <string name="suggestion">추천</string>
</resources>