<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/exit"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/back" />

        <Button
            android:id="@+id/show_result"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/show_result" />

        <Button
            android:id="@+id/paper"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/paper" />

        <Button
            android:id="@+id/scissors"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/scissors" />

        <Button
            android:id="@+id/rock"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:text="@string/rock" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/n"
        android:text="@string/textview"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintLeft_toLeftOf="@id/linearLayout"
        app:layout_constraintRight_toRightOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>