<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/textView"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/show_result"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/grape" />

        <Button
            android:id="@+id/paper"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/apple" />

        <Button
            android:id="@+id/scissors"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/banana" />

        <Button
            android:id="@+id/rock"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/lime"  />

    </LinearLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/n"
        android:hint="@string/textview"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintLeft_toLeftOf="@id/linearLayout"
        app:layout_constraintRight_toRightOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/suggestion"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/suggestion"
        app:layout_constraintLeft_toRightOf="@id/textView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/next"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:text="@string/lime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/n"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>